# controller/coba.go
@@ -80,7 +80,7 @@ func GetPresensiID(c *fiber.Ctx) error {
 // @Tags Presensi
 // @Accept json
 // @Produce json
-// @Param request body Presensi true "Payload Body [RAW]"
+// @Param request body ReqPresensi true "Payload Body [RAW]"
 // @Success 200 {object} Presensi
 // @Failure 400
 // @Failure 500
@@ -114,6 +114,18 @@ func InsertDataPresensi(c *fiber.Ctx) error {
 	})
 }
 
+// UpdateData godoc
+// @Summary Update data presensi.
+// @Description Ubah data presensi.
+// @Tags Presensi
+// @Accept json
+// @Produce json
+// @Param id path string true "Masukan ID"
+// @Param request body ReqPresensi true "Payload Body [RAW]"
+// @Success 200 {object} Presensi
+// @Failure 400
+// @Failure 500
+// @Router /update/{id} [put]
 func UpdateData(c *fiber.Ctx) error {
 	db := config.Ulbimongoconn
 
@@ -160,6 +172,17 @@ func UpdateData(c *fiber.Ctx) error {
 	})
 }
 
+// DeletePresensiByID godoc
+// @Summary Delete data presensi.
+// @Description Hapus data presensi.
+// @Tags Presensi
+// @Accept json
+// @Produce json
+// @Param id path string true "Masukan ID"
+// @Success 200
+// @Failure 400
+// @Failure 500
+// @Router /delete/{id} [delete]
 func DeletePresensiByID(c *fiber.Ctx) error {
 	id := c.Params("id")
 	if id == "" {
