# docs/swagger.json
@@ -17,6 +17,41 @@
     "host": "ws-agung-2024-b77249100221.herokuapp.com",
     "basePath": "/",
     "paths": {
+        "/delete/{id}": {
+            "delete": {
+                "description": "Hapus data presensi.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Presensi"
+                ],
+                "summary": "Delete data presensi.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Masukan ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
         "/ins": {
             "post": {
                 "description": "Input data presensi.",
@@ -37,7 +72,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/controller.Presensi"
+                            "$ref": "#/definitions/controller.ReqPresensi"
                         }
                     }
                 ],
@@ -114,6 +149,53 @@
                     },
                     "404": {
                         "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/update/{id}": {
+            "put": {
+                "description": "Ubah data presensi.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Presensi"
+                ],
+                "summary": "Update data presensi.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Masukan ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Payload Body [RAW]",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controller.ReqPresensi"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controller.Presensi"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
                     },
                     "500": {
                         "description": "Internal Server Error"
@@ -227,6 +309,72 @@
                     "type": "string",
                     "format": "date-time",
                     "example": "2024-09-01T00:00:00Z"
+                },
+                "latitude": {
+                    "type": "number",
+                    "example": 123.12
+                },
+                "location": {
+                    "type": "string",
+                    "example": "Bandung"
+                },
+                "longitude": {
+                    "type": "number",
+                    "example": 123.11
+                },
+                "phone_number": {
+                    "type": "string",
+                    "example": "08123456789"
+                }
+            }
+        },
+        "controller.ReqKaryawan": {
+            "type": "object",
+            "properties": {
+                "hari_kerja": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    },
+                    "example": [
+                        "Senin",
+                        "Selasa",
+                        "Rabu",
+                        "Kamis",
+                        "Jumat",
+                        "Sabtu",
+                        "Minggu"
+                    ]
+                },
+                "jabatan": {
+                    "type": "string",
+                    "example": "Anonymous"
+                },
+                "jam_kerja": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/controller.JamKerja"
+                    }
+                },
+                "nama": {
+                    "type": "string",
+                    "example": "Tes Swagger"
+                },
+                "phone_number": {
+                    "type": "string",
+                    "example": "08123456789"
+                }
+            }
+        },
+        "controller.ReqPresensi": {
+            "type": "object",
+            "properties": {
+                "biodata": {
+                    "$ref": "#/definitions/controller.ReqKaryawan"
+                },
+                "checkin": {
+                    "type": "string",
+                    "example": "Masuk"
                 },
                 "latitude": {
                     "type": "number",
